#209 prepare for master merge